tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_6.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (x: Integer, y: Integer): Integer => 123

do 9.foo(8).print()

let foo = (x: Float, y: Float): Float => 789.0

do 9.0.foo(8.0).print()

do 1.0.foo(2) // compile error

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/single_dispatch_6.kk:9:12
  │
9 │ do 1.0.foo(2) // compile error
  │            ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Float       | + Integer   |
    +---------------+-------------+
